Closed Bug 403733 Opened 18 years ago Closed 18 years ago

[FIX]<legend> changed from display:none is shown inside the fieldset rather than on its border

Categories

(Core :: Layout: Form Controls, defect)

x86
macOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: regression, testcase)

Attachments

(3 files)

The testcase and reference have the same final DOM, so they should display the same way. They are based on layout/reftests/bugs/359869-1.html (from bug 359869). Could this be a regression from bug 336153?
Attached file testcase
Attached file reference
More likely bug 386642.
Yeah, definitely. The problem is that the parent is not the fieldset but rather its insertion frame, so the test for parent type in IsValidSibling() fails.
Blocks: 386642
Attached patch Proposed fixSplinter Review
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #288691 - Flags: superreview?(roc)
Attachment #288691 - Flags: review?(roc)
Keywords: regression
Summary: <legend> changed from display:none is shown inside the fieldset rather than on its border → [FIX]<legend> changed from display:none is shown inside the fieldset rather than on its border
Attachment #288691 - Flags: superreview?(roc)
Attachment #288691 - Flags: superreview+
Attachment #288691 - Flags: review?(roc)
Attachment #288691 - Flags: review+
Comment on attachment 288691 [details] [diff] [review] Proposed fix reasonably safe regression fix
Attachment #288691 - Flags: approval1.9?
Attachment #288691 - Flags: approval1.9? → approval1.9+
Checked in, including the tests. Jesse, thanks for the test pair!
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: