Fix bug 403733: dynamic legend insertion should not use text as valid siblings.  r+sr=roc, a=schrep